fix: change narration block background for contrast

--- a/src/styles/_prosemirror-boxes.scss
+++ b/src/styles/_prosemirror-boxes.scss
@@ -24,7 +24,7 @@
   --narrative-font: Vollkorn, sans-serif;
   --narrative-font-size: 1rem;
   --narrative-border-color: #115c13;
-  --narrative-background-color: rgba(255, 255, 255, 0.2);
+  --narrative-background-color: rgba(247, 241, 218, 0.7);
   /* Citation Text */
   --citation-font: Vollkorn, sans-serif;
   --citation-font-size: 1rem;
